# divijdawar.github.io

./: 2025-02-09-foundations-of-language-models.md  _config.yml  failure.html  faq.html  foundations.html  index.html  library.css  library.html  mech_interp.html  posts.html  projects.html  site.cabal  site.hs  styles.css  styles2.css
.github/workflows/: deploy.yml
_posts/: 2025-02-08-foundations.md  foundations.html  styles2.css
css/: style.css
pages/: faq.html  library.html  resources.html
posts/: 2025-02-09-foundations.md  2025-03-20-mech_interp.md  2025-07-21-failure.md  foundations.html
templates/: default.html  page.html  post.html  sitemap.xml
