cabal-version: 2.4
name:          site
version:       0.1.0.0
build-type:    Simple

executable site
  main-is:          site.hs
  build-depends:    base >= 4.14 && < 5
                  , hakyll >= 4.16 && < 5
                  , filepath
  ghc-options:      -threaded
  default-language: Haskell2010
